--- a/_posts/2024-11-30-sensors-I.md
+++ b/_posts/2024-11-30-sensors-I.md
@@ -24,10 +24,9 @@ _Thermocouples_
 ### Thermistor
 A thermistor is a cost-effective temperature sensor that changes its resistance based on temperature variations. It is a semiconductor based resistor. There are two main types: **NTC (Negative Temperature Coefficient)**, where resistance decreases as temperature rises, and **PTC (Positive Temperature Coefficient)**, where resistance increases with temperature. This characteristic makes thermistors ideal for applications requiring precise temperature control within moderate ranges, such as in household appliances and medical devices.
 
-
-
-![Thermistor](../assets/img/B1_Sensors/2_thermistor.png){: width="305" height="400" .w-50 .right}
+![Thermistor](../assets/img/B1_Sensors/2_thermistor.png)
 _Thermistor_
+
 
 ### RTDs
 RTDs (Resistance Temperature Detectors) are precision temperature sensors that measure temperature by correlating the resistance of a metal to temperature. Typically platinum is used as a metal, it was proposed by [Sir William Siemens](https://en.wikipedia.org/wiki/Sir_William_Siemens) for resistance temperature sensor. The relationship between resistance and temperature in RTDs is more linear and stable than in thermistors, making them suitable for high-accuracy applications. RTDs are commonly used in industrial processes and laboratory settings where accurate, repeatable temperature measurements over a wide range are critical.
@@ -69,11 +68,11 @@ _CP211 Piezoelectric Pressure Transducer_
 
 Simply put, a change in pressure moves a diaphragm (a flexible membrane, part of a capacitor), changing the capacitance, which allows us to infer the pressure variation. In general, we call it *capacitive sensing* and this is used to measure many things, not only pressure. If you recall the equation of capacitance, you realize that changing the distance is the most practical way to achieve capacitive sensing. I will not explain the equation here. 
 
-$$
+<!-- $$
 \begin{equation}
   C = \mathcal{E}_r \mathcal{E}_0 \frac{A}{d}
 \end{equation}
-$$
+$$ -->
 
 
 These sensors are widely used, especially in smart wearable technology and touchscreens. Their extensive use makes capacitive pressure sensors an active area of research, focusing on improving measurement accuracy and further miniaturizing them.
